--- a/src/globals.scss
+++ b/src/globals.scss
@@ -2,13 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root {
    margin: 0;
    padding: 0;
    color: #000000;
-   font-family: 'Montserrat', sans-serif;
+   font-family: 'Open Sans', sans-serif;
 }
 
 // Improve user experience on touch devices by removing visual effects.
