feat: :rocket: ready to deploy

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -17,3 +17,10 @@ a {
    -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
 }
+
+// Remove number input spin buttons in WebKit browsers.
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
+}
